--- a/Homework question day 1.Rmd
+++ b/Homework question day 1.Rmd
@@ -34,14 +34,6 @@ If you had 2 decks of cards, using the choose function in R, what code will atta
 * '1/(choose (52,1)* choose(51,2))'
 * '1/(choose (2,52))'
 
-## Lecture 2b
-
-Consider a sequence of 10 coin flips, represented by the string `TTTHTHTTTH`. Which statement gives the total number of different sequences of 10 coin flips that could result in this number of heads?
-
-* `paste my own
-* `factorial(10)/(factorial(4)*factorial(7))`
-* `integrate(dnorm, -Inf, 0)`
-* `sapply(3:10, function(x) factorial(x))`
 
 ## Lecture 2b 
 
@@ -57,38 +49,53 @@ Concepts that you need to master R in this class do NOT include:
 
 ## Lecture 3a
 
-Which command will create a multiplication table for the numbers from 1 to 10?
-Assume `r` is a row vector defined like this: `r <- matrix(1:10,1)`
+The diag function has multiple uses:
+```
+diag(x = 1, nrow, ncol)
+diag(x) <- value
+````
 
-* pastemyown
-* r %*% t(r)
-* r^2
-* t(r)^2
+* Answers x,w,y, are true
+* x) It can extract a diagonal given a matrix 
+* w) It can construct a diagonal matrix 
+* y) It can replace the diagonal of a matrix
+* z) It can diagnose cancer without assistance.
 
 ## Lecture 3b
 
-Given a 2 by 2 matrix `A <- matrix(c(2, 5, 3, 8), 2, byrow=TRUE)`, which command performs Gaussian elimination to put A in upper triangular form?
+Given a Markov Matrix, which is true
 
-* pastemy own2,] - A[1,] * 3/2
-* A[3,] <- A[3,] - A[2,]
-* A[2,] <- A[1,] * 3/8
-* A[2,] <- A[2,] + A[1,] + A[1,]/2
+* all entries of the matrix are nonnegative and the sum of each column vector
+is equal to 1
+* The sum of the rows is the square root of pi
+* Markov Matrices can be NXM in size
+* A Markov matrix is not a special classification of an Eigenvector 
 
 
 ## Lecture 4a
 
-Paste my ownto add normally distributed noise to an input vector:
+Choose the most appropriate answer for this R code calculating two ways the cost of daily medicine?
 ```
-addRandom <- function(i) i + rnorm(1)
-y <- sapply(0:10, addRandom)
+> price <- c( lisonopril=106/30, crestor=204.00/30, 
++             clorthiazide=12.10/15, fibrosol=160/30)
+> dosage_day <- c( lisonopril=3, crestor=0.5, 
++             clorthiazide=0.5, fibrosol=1)
+> 
+> cost_day_1  = sum(price * dosage_day)
+> cost_day_1a = price %*% dosage_day
+> cost_day_1
+[1] 19.73667
+> cost_day_1a
+         [,1]
+[1,] 19.73667
+> 
 ```
-How would you change `addRandom` to a vectorized version that could be used like this:
-`y <- addRandom(0:10)`? (Choose the best solution)
 
-* `addRandomVectorized <- function(v) v + rnorm(length(v))`
-* `addRandomVectorized <- function(i) vapply(i, function(x) x+rnorm(1), 1)`
-* `addRandomVectorized <- function(x) sapply(x, addRandom)`
-* `addRandomVectorized <- Vectorize(addRandom)`
+* The Dot product of 2 vectors equals the sum of the products of two vectors
+* A vector times a vector is a scaler
+* A diagonal times a vector of that diagonal results in a squared value
+* R is fun only for statisticians
+
 
 ## Lecture 4b
 
@@ -127,17 +134,13 @@ paste my ownse addresses cannot be read by the built-in `url()` function?
 
 ## Lecture 6a
 
-paste my owneturned by the following query?
-```
-A <- data.frame(a=1:10)
-B <- data.frame(b=5:15)
-sqldf::sqldf("SELECT * FROM A JOIN B ON a==b")
-```
+sqldf is a fantastic tool for data scientists. Which of the following statements are true?
 
-* 6
-* 10
-* 8
-* none
+* All of these
+* Right and full outer joins, which are unavailable in sqldf, can be accomplished with the "merge" function of base R
+* sqldf is a useful tool for manipulation data with such statements such as:
+sqldf::sqldf("SELECT * FROM A JOIN B ON a==b")
+* sqldf operates on dataframes
 
 ## Lecture 6b
 
@@ -159,3 +162,28 @@ Which is true of Tidy Data by Hadley Wickam?
 * It is good to have the variables identified at the start of a row versus the variable as a column
 * Wide tables with a unique entry for the first element each row are always better  than long tables which may have nonunique entries as the first element in multiple rows.
 
+## Lecture 7b
+
+What is TRUE of the following code and results? (Code was used in class as an example of how to build a model for our class project)?
+```
+> T_shirts <- data.frame(
++   sex=sample(c("M","F"), 100, replace=T), 
++   size=sample(c("L", "M", "S"), 100, replace=T)
++ )
+> 
+> table(T_shirts)
+   size
+sex  L  M  S
+  F 19 19 17
+  M 20 10 15
+> xtabs(~ sex + size, T_shirts)
+   size
+sex  L  M  S
+  F 19 19 17
+  M 20 10 15
+```
+
+* Only sometimes result in the same data , as the code does not identify a seed.
+* Always result in females having more small sizes
+* Always result in males having more large sizes
+* Always result in the same data
